--- a/index.html
+++ b/index.html
@@ -1564,8 +1564,8 @@ document.addEventListener('DOMContentLoaded', function() {
         if (window.location.pathname.includes('index.html')) {
             // Already on home page, do nothing
         } else {
-            // Redirect to home page
-            window.location.href = 'index.html';
+            // Redirect to Affiliate Program
+            window.location.href = 'affiliate-portal.html';
         }
     }
 });
@@ -1655,3 +1655,4 @@ function startAffiliateSignup() {
     </script>
 </body>
 </html>
+
