--- a/index.html
+++ b/index.html
@@ -1561,11 +1561,11 @@ document.addEventListener('DOMContentLoaded', function() {
     const currentUser = localStorage.getItem('currentUser');
     if (currentUser) {
         // User is already logged in
-        if (window.location.pathname.includes('affiliate-portal.html')) {
-            // Already on Affliate Program, do nothing
+        if (window.location.pathname.includes('index.html')) {
+            // Already on Home Page, do nothing
         } else {
-            // Redirect to Home Page
-            window.location.href = 'index.html';
+            // Redirect to Affiliate Program
+            window.location.href = 'affiliate-portal.html';
         }
     }
 });
@@ -1655,5 +1655,6 @@ function startAffiliateSignup() {
     </script>
 </body>
 </html>
+
 
 
