affiliate-portal.html

--- a/affiliate-portal.html
+++ b/affiliate-portal.html
@@ -294,7 +294,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             const affiliateId = localStorage.getItem('affiliateId');
             if (!affiliateId) {
-                window.location.href = 'index.html';
+                window.location.href = 'affiliate-portal.html';
                 return;
             }
             loadRealAffiliateData();
@@ -444,4 +444,5 @@
         }
     </script>
 </body>
+
 </html>
