--- a/index.html
+++ b/index.html
@@ -1562,10 +1562,10 @@ document.addEventListener('DOMContentLoaded', function() {
     if (currentUser) {
         // User is already logged in
         if (window.location.pathname.includes('index.html')) {
-            // Already on Home Page, do nothing
+            // Already on home page, do nothing
         } else {
-            // Redirect to Affiliate Program
-            window.location.href = 'affiliate-portal.html';
+            // Redirect to home page
+            window.location.href = 'index.html';
         }
     }
 });
@@ -1655,6 +1655,3 @@ function startAffiliateSignup() {
     </script>
 </body>
 </html>
-
-
-
